# furious-forests

./: .gitignore  CMakeLists.txt  Constants.hpp  Patchnotes.md  Paths.hpp  README.md  Rules.md  TODO.md  main.cpp  main.hpp
Core/: Constants.hpp  General.hpp  InputsObserver.hpp  Paths.hpp  Settings.hpp
Managers/: FontsManager.hpp  SoundsManager.hpp  TexturesManager.hpp
Menu/: Menu.hpp  MenuSettings.hpp  MenuText.hpp
Parcers/: SettingsParcer.hpp  TexturesSizesParcer.hpp
Utils/: AnimationFiller.hpp  InitializeShape.hpp  Initializer.hpp  ModifyShapes.hpp  Wrongs.hpp
saves/: settings.txt
textures/: textures_sizes.txt
